fix white space on right side of site

--- a/src/index.css
+++ b/src/index.css
@@ -482,18 +482,6 @@ code {
   }
 }
 
-/* ----------------------------------------------
- * Generated by Animista on 2020-10-22 17:56:52
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation slide-in-bottom
- * ----------------------------------------
- */
 @-webkit-keyframes slide-in-bottom {
   0% {
     -webkit-transform: translateY(1000px);
@@ -519,6 +507,15 @@ code {
   }
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 /* utilities */
 
 .footer {
@@ -535,6 +532,7 @@ Section {
   border-top-right-radius: 2%;
   border-bottom-right-radius: 2%;
 }
+
 .about-img::after {
   content: "";
   position: absolute;
@@ -542,7 +540,7 @@ Section {
   height: 100%;
   top: 0;
   left: 0;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.658), rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, rgb(5, 5, 7), rgba(0, 0, 0, 0) 40%);
 }
 
 .sign {
@@ -700,7 +698,7 @@ header {
   border-bottom: solid 3px var(--crimson);
 }
 
-.jumbo::after {
+/* .jumbo::after {
   content: "";
   overflow: hidden;
   animation: grain 1s steps(10) infinite;
@@ -709,16 +707,10 @@ header {
   width: 500%;
   opacity: 0.3;
   position: fixed;
-}
+} */
 
 .opaque {
   opacity: 1 !important;
-}
-
-/* content section */
-#content-container {
-  text-align: center;
-  height: 90vh;
 }
 
 .section-title {
